--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "formidable": "^1.1.1",
     "method-override": "^2.3.10",
     "serve-favicon": "^2.4.5"
   }
